RESOLVED FIXED54837
Crash when a plug-in requests a javascript: url that destroys the plug-in
https://bugs.webkit.org/show_bug.cgi?id=54837
Summary Crash when a plug-in requests a javascript: url that destroys the plug-in
Anders Carlsson
Reported 2011-02-20 15:56:53 PST
Crash when a plug-in requests a javascript: url that destroys the plug-in
Attachments
Patch (15.38 KB, patch)
2011-02-20 16:04 PST, Anders Carlsson
mjs: review+
Anders Carlsson
Comment 1 2011-02-20 16:04:17 PST
Maciej Stachowiak
Comment 2 2011-02-20 16:06:14 PST
Comment on attachment 83106 [details] Patch r=me
Anders Carlsson
Comment 3 2011-02-20 16:09:43 PST
Note You need to log in before you can comment on or make changes to this bug.